Add virtual thread example